FullQa New/src/HG Data/objects/HGExternalObject__x.object
<CustomObject>
    <externalDataSource>HG</externalDataSource>
    <externalName>HGExternalObject</externalName>
    <fields>
        <fullName>ADDRESS_LINE1__c</fullName>
        <label>Address line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_LINE2__c</fullName>
        <label>Address line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_PHONE__c</fullName>
        <label>Company phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HGId__c</fullName>
        <description>Primary ID</description>
        <label>HG ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baseDataId__c</fullName>
        <description>base data id</description>
        <label>Base Data ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_ISO__c</fullName>
        <label>Country (ISO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employeesRange__c</fullName>
        <description>Range indicating the total number of employees at the company.</description>
        <label>Employee Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revenueRange__c</fullName>
        <description>Range indicating the annual sales of the company.</description>
        <label>Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state_ISO__c</fullName>
        <label>State (ISO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subLevelIndustry__c</fullName>
        <description>Industry of the company.</description>
        <label>Sub-Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitAttributesId__c</fullName>
        <description>Static unique identifiers for each attribute.</description>
        <label>Attribute ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitAttributes__c</fullName>
        <label>Product Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCategoryId__c</fullName>
        <description>A static unique identifier for each category.</description>
        <label>Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCategoryParentId__c</fullName>
        <description>A static unique identifier for each parent category.</description>
        <label>Parent Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCategoryParent__c</fullName>
        <label>Product Category Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCategory__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCountryConfidenceScore__c</fullName>
        <description>score based on consistency and recency of signals</description>
        <label>Country Confidence Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitCountryDateLastVerified__c</fullName>
        <label>Country Date Last Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitCountryHitId__c</fullName>
        <label>Country Hit ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitCountryIntensity__c</fullName>
        <description># of verification dates supporting the product</description>
        <label>Country Intensity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitLocationConfidenceScore__c</fullName>
        <description>score based on consistency and recency of signals</description>
        <label>Location Confidence Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitLocationDateLastVerified__c</fullName>
        <label>Location Date Last Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitLocationHitId__c</fullName>
        <label>Location Hit ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitLocationIntensity__c</fullName>
        <description># of verification dates supporting the product</description>
        <label>Location Intensity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technologyHitProductId__c</fullName>
        <description>A static unique identifier for each product.</description>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitProduct__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitStaticId__c</fullName>
        <description>A static 16-character string value that identifies a product hit on the HG Data feed. This value does not change month over month for the given record.</description>
        <label>Product Hit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitVendorId__c</fullName>
        <description>A static unique identifier for each vendor.</description>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>technologyHitVendor__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>topLevelIndustry__c</fullName>
        <description>High level industry of the company.</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>HGExternalObject</label>
    <pluralLabel>HGExternalObjects</pluralLabel>
</CustomObject>